src/index.css
/* @font-face {
    font-family: 'Be Vietnam Pro';
    src: url('./public/assets/fonts/BeVietnamPro-Regular.ttf');
}

@font-face {
    font-family: 'Be Vietnam Pro';
    src: url('./public/assets/fonts/BeVietnamPro-Medium.ttf');
}

@font-face {
    font-family: 'Be Vietnam Pro';
    src: url('./public/assets/fonts/BeVietnamPro-SemiBold.ttf');
}

@font-face {
    font-family: 'Be Vietnam Pro';
    src: url('./public/assets/fonts/BeVietnamPro-Bold.ttf');
}

@font-face {
    font-family: 'Be Vietnam Pro';
    src: url('./public/assets/fonts/BeVietnamPro-ExtraBold.ttf');
} */

@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@400;500;600;700;800&display=swap');

/* import fonts */
@tailwind base;
@tailwind components;
@tailwind utilities;

/*=== font famil ===*/

@layer base {
    html {
        font-family: 'Be Vietnam Pro', sans-serif;
        font-weight: 400;
        color: #545a6d;
    }
    body {
    }
}

/* custom css */

.h-dropdown.active {
    opacity: 1;
    visibility: visible;
    transform: translate(0, 0);
}

/* width */
::-webkit-scrollbar {
    width: 5px;
}

/* Track */
::-webkit-scrollbar-track {
    background: transparent;
}

/* Handle */
::-webkit-scrollbar-thumb {
    background: #c9c9c9;
}

.sidebar-submenu {
    display: none;
    overflow: hidden;
    height: 0;
}

.sidebar-submenu[data-state='visible'] {
    display: block;
}

#sidebar li > *.active {
    @apply text-blue;
}

#sidebar .sidebar-submenu li > * {
    padding-left: 50px;
    padding-top: 10px;
    padding-bottom: 10px;
}
#sidebar {
    transition: 300ms ease;
}

#sidebar[data-state='collapsed'] {
    width: 70px;
}

#sidebar[data-state='collapsed'] .menu-title,
#sidebar[data-state='collapsed'] .notification-badge,
#sidebar[data-state='collapsed'] .dropdown-icon,
#sidebar[data-state='collapsed'] .menu-catagory-title,
#sidebar[data-state='collapsed'] .promotion-box {
    display: none;
}

#sidebar[data-state='collapsed'] .sidebar-submenu {
    display: block;
    height: 100%;
    visibility: visible;
    opacity: 1;
    position: absolute;
    background: #fff;
    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 10%);
    right: 100%;
}

#sidebar[data-state='collapsed'] .sidebar-submenu .menu-title {
    pointer-events: all;
    transform: translateX(0);
    opacity: 1;
}

.dason-inner[data-sidebar-state='collapsed'] .logo-container {
    padding-right: 30px;
}

.dason-inner[data-sidebar-state='collapsed'] .logo-container .logo-text {
    display: none;
}

